--- a/001/index.html
+++ b/001/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-
+    <input 
+    type="text"
+    placeholder="Teste de precendência"
+    id="nome"
+    disabled="disabled"
+    >
     
     <script src="index.js"></script>
 </body>
