--- a/001/operadoresAritimeticos.html
+++ b/001/operadoresAritimeticos.html
@@ -29,7 +29,10 @@
         // document.write('<h1>O incremento de ' +  num1 + ' é: ' + (++num1) + '</h1><br>');
         // document.write('<h1>O decremento de ' +  num1 + ' é: ' + (--num1) + '</h1><br>');
 
-        var teste = 'Olá ';
+
+// ================================================================================================               
+
+        // var teste = 'Olá ';
 
         // teste = teste + 5;
         // teste += 5;
@@ -37,8 +40,17 @@
         // teste *= 5;
         // teste /= 5;
         // teste %= 3;
-        teste += 'Valdemar';
-        document.write(teste);
+        // teste += 'Valdemar';
+        // document.write(teste);
+
+// ================================================================================================
+
+        document.write((11 + (5 - 5) * 2) / 2);
+
+        // () - aplicar precedência
+
+        //1° multiplicação e subtração
+        //2° soma e subtração
 
     </script>
 </head>
