--- a/ARRAY/array_metodo_pesquisa.html
+++ b/ARRAY/array_metodo_pesquisa.html
@@ -6,7 +6,21 @@
     <title>JavaScript</title>
     <script>
 
-    let lista_coisas = Array();
+    let lista_frutas = Array();
+
+    lista_frutas[0] = 'Banana';
+    lista_frutas[1] = 'Maçã';
+    lista_frutas[2] = 'Morango';
+    lista_frutas[3] = 'Uva';
+
+    var auxiliar = lista_frutas.indexOf('Maçã');
+
+    if(auxiliar === -1) {
+        console.log('Elemento não existe');
+    }else {
+        console.log('Elemento existe está na posição ' +  auxiliar)
+    }
+
     
     </script>
 </head>
