--- a/APP/app.html
+++ b/APP/app.html
@@ -9,11 +9,21 @@
 </head>
 <body onresize="ajustaTamanhoPalcoJogo()">
     
+    <div class="painel">
+        <div class="vidas">
+            <img id="v1" src="imagens/coracao_cheio.png">
+            <img id="v2" src="imagens/coracao_cheio.png">
+            <img id="v3" src="imagens/coracao_cheio.png">
+        </div>
+        <div class="cronometro">Tempo restante: <span id="cronometro"></span></div>
+    </div>
 
     <script>
+        document.getElementById('cronometro').innerHTML = tempo;
+
         setInterval(function() {
             posicaoRandomica()
-        }, 1000);
+        }, 2000);
     </script>
 </body>
 </html>
