--- a/APP/app.html
+++ b/APP/app.html
@@ -21,7 +21,7 @@
     <script>
         document.getElementById('cronometro').innerHTML = tempo;
 
-        setInterval(function() {
+        const criaMosca = setInterval(function() {
             posicaoRandomica()
         }, 2000);
     </script>
