--- a/APP/app.html
+++ b/APP/app.html
@@ -23,7 +23,7 @@
 
         const criaMosca = setInterval(function() {
             posicaoRandomica()
-        }, 2000);
+        }, criaMosquitoTempo);
     </script>
 </body>
 </html>
