--- a/APP/fim_de_jogo.html
+++ b/APP/fim_de_jogo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<title></title>
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -22,7 +23,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="d-flex justify-content-center">
-						<button type="button" class="btn btn-dark btn-lg" onclick="window.location.href = 'app.html' ">Reiniciar</button>
+						<button type="button" class="btn btn-dark btn-lg" onclick="window.location.href = 'index.html' ">Reiniciar</button>
 					</div>
 				</div>
 			</div>
