--- a/ECMAscript/ES6/let.html
+++ b/ECMAscript/ES6/let.html
@@ -8,8 +8,13 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
     <script type="text/babel">
-        const getMessage = () => "Hello World";
-        document.getElementById('output').innerHTML = getMessage();
+
+        // 3 escopos: global, função e bloco
+
+        if(true) {
+            let serie = 'Friends'
+        }
+
     </script>
 </head>
 <body>
